# project_camion

./: README.md
back/: .gitignore  Cargo.toml  sample.env
back/migrations/: 20211007194730_create_users_table.down.sql  20211007194730_create_users_table.up.sql  20211014090512_create_jokes_table.down.sql  20211014090512_create_jokes_table.up.sql  20211014090904_create_joke_lines_table.down.sql  20211014090904_create_joke_lines_table.up.sql
back/migrations/2021-10-05-083310_create_jokes/: up.sql
back/migrations/2021-10-06-063250_create_users_table/: up.sql
back/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  users.rs
back/src/business/: db.rs  mod.rs  security.rs  users.rs
back/src/business/users/: auth.rs  email.rs  jwt.rs  login.rs  mod.rs  password.rs  queries.rs  registration.rs  username.rs
back/src/core/: db.rs  mod.rs
back/src/core/jokes/: dl.rs  mod.rs
back/src/core/users/: dl.rs  email.rs  login.rs  mod.rs  password.rs  registration.rs  role.rs  token.rs  username.rs
back/src/web/: api.rs  application.rs  server.rs
back/src/web/api/: auth.rs  misc.rs  mod.rs
back/src/web/api/jokes/: mod.rs
back/src/web/api/users/: mod.rs  request_auth.rs  utils_auth.rs
back/static/: global.css
back/tests/: api_test.rs
back/tests/api/: mod.rs
back/tests/api/auth/: login.rs  mod.rs  register.rs
back/tests/api/jokes/: create.rs
back/tests/api/users/: change_user_role.rs  get_user_data.rs  mod.rs  search_users.rs
back/tests/api_tests/: auth_tests.rs  mod.rs
front/: package-lock.json  package.json  rollup.config.js  svelte.config.js
(+7 files in other folders)
