[package]
name = "camion"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3"
# Must use sqlx 0.4 because actix 3 and sqlx 5 don't use compatible tokio ver.
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "postgres" ] }
dotenv = "0.15.0"
serde = "1"
regex = "1.5"
argon2 = "0.2"
rand_core = { version = "0.6.3", features = ["std"] }