[package]
name = "camion"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
actix-rt = "2.2.0"
tokio = "1"
uuid = { version = "0.8", features = ["v4"] }

[dependencies]
actix-web = "=4.0.0-beta.9"
# Must use sqlx 0.4 because actix 3 and sqlx 5 don't use compatible tokio ver.
sqlx = { version = "0.5.1", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7"
chrono = { version = "0.4", features = [ "serde" ] }
regex = "1.5"
argon2 = "0.3.1"
rand_core = { version = "0.6.3", features = ["std"] }